# subscription-offer-app

./: .env.example  .gitignore  AGENTS.md  BASIC_PRD.md  Makefile  README.md  docker-compose.yml  sonar-project.properties
.devin/skills/demo-quick-start/: SKILL.md
.github/workflows/: ci.yml  security.yml
.windsurf/devin-issues/: issue-1-docker-helm.md  issue-2-cicd-sonarqube.md  issue-3-observability.md  issue-4-terraform-docs.md
.windsurf/rules/: ui-style-guide.md
docs/: backlog.md  dependency-update-process.md  runbook.md
helm/demo-ui/: Chart.yaml  values.yaml
helm/demo-ui/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml
helm/offer-decision-service/: Chart.yaml  values.yaml
helm/offer-decision-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service.yaml  serviceaccount.yaml
infra/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf  (+1 more)
services/offer-decision-service/: .dockerignore  Dockerfile  pyproject.toml
services/offer-decision-service/app/: ai_explain.py  logging_config.py  main.py  metrics.py  models.py  observability.py  policy.py  schemas.py  tracing.py
services/offer-decision-service/tests/: conftest.py  test_ai_explain.py  test_api.py  test_decide_endpoint.py  test_health.py  test_integration.py  test_observability.py  test_offer.py  test_policy.py  test_security.py
web/demo-ui/: .dockerignore  Dockerfile  package-lock.json  package.json
web/demo-ui/app/: globals.css  layout.js  page.js
(+7 files in other folders)
