[project]
name = "offer-decision-service"
version = "0.1.0"
description = "Subscriber offer decisioning API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "openai>=1.30,<2",
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20,<2",
    "prometheus-fastapi-instrumentator>=7,<8",
    "structlog>=24,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "httpx>=0.27,<1",
    "ruff>=0.6,<1",
    "pytest-asyncio>=0.23,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
