[project]
name = "offer-decision-service"
version = "0.1.0"
description = "Subscriber offer decisioning API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "openai==2.26.0",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==5.0.0",
    "httpx==0.28.1",
    "ruff==0.15.5",
]
audit = [
    "pip-audit==2.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
